--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,21 @@ body {
     font-size: 3rem;
     margin:  5%;
     color: #FEF2BF;
-  }
+  
+}
+
+.container {
+    display: block;
+    width: 50%;
+    margin: auto;
+  
+}
+  
+.btn {
+    margin: 25px;
+    display: inline-block;
+    height: 200px;
+    width: 200px;
+    border: 10px solid black;
+    border-radius: 20%;
+}
