--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,16 @@ body {
 #level-title {
     font-family: 'Press Start 2P', cursive;
     font-size: 3rem;
-    margin:  5%;
+    margin: 5%;
     color: #FEF2BF;
-  
 }
 
 .container {
     display: block;
     width: 50%;
     margin: auto;
-  
 }
-  
+
 .btn {
     margin: 25px;
     display: inline-block;
@@ -25,4 +23,25 @@ body {
     width: 200px;
     border: 10px solid black;
     border-radius: 20%;
+}
+
+.game-over {
+    background-color: red;
+    opacity: 0.8;
+}
+
+.red {
+    background-color: red;
+}
+
+.green {
+    background-color: green;
+}
+
+.blue {
+    background-color: blue;
+}
+
+.yellow {
+    background-color: yellow;
 }
